--- a/roles/apache/tasks/main.yml
+++ b/roles/apache/tasks/main.yml
@@ -7,3 +7,14 @@
 - name:  Inclui debian.yml
   include: debian.yml
   when: (ansible_facts['os_family'] == "Debian")
+
+- name: "Cria diretorio que irá hospedar os arquivos do site"
+  file:
+    path: "{{ site_folder }}"
+    state: directory
+    mode: '0755'
+
+- name: "Copia arquivo index.html simples"
+  copy:
+    src: index.html
+    dest: "{{ site_folder }}"    
