--- a/roles/apache/handlers/main.yml
+++ b/roles/apache/handlers/main.yml
@@ -47,4 +47,18 @@
     owner: www-data
     group: www-data
     recurse: yes
-  when: (ansible_facts['os_family'] == "Debian")       
+  when: (ansible_facts['os_family'] == "Debian")
+
+- name: 'enableSite'
+  command: a2ensite {{ log_prefix }}.conf
+
+- name: 'reloadApache2'
+  service:
+    name: apache2
+    state: reloaded
+    enabled: yes
+
+- name: 'enableHttpd'
+  service:
+    name: httpd
+    enabled: yes    
