--- a/roles/apache/tasks/redhat.yml
+++ b/roles/apache/tasks/redhat.yml
@@ -18,7 +18,7 @@
 - name: "Cria virtual hosts com as configuracoes do site - RedHat"
   template:
     src: templates/site.conf
-    dest: /etc/http/vhost.d/{{ log_prefix }}.conf
+    dest: /etc/httpd/vhost.d/{{ log_prefix }}.conf
   when: (ansible_facts['os_family'] == "RedHat")
   notify:
     - addInHostsFile
