--- a/roles/apache/handlers/main.yml
+++ b/roles/apache/handlers/main.yml
@@ -7,7 +7,7 @@
 
 - name: 'addInHostsFile'
   lineinfile:
-    path: /etc/hosts    
+    path: /etc/hosts
     line: "{{ item }}"
     create: yes
   loop:
@@ -16,14 +16,14 @@
 
 - name: 'addInHttpdFile'
   lineinfile:
-    path: /etc/httpd/conf/httpd.conf  
-    line: "Include vhost.d/*conf"
+    path: /etc/httpd/conf/httpd.conf
+    line: "Include vhost.d/*.conf"
   when: (ansible_facts['os_family'] == "RedHat")
 
 - name: 'RestartHttpd'
-  service: 
+  service:
     name: httpd
-    state: restarted    
+    state: restarted
 
 - name: InstallWordPress
   unarchive:
@@ -32,16 +32,16 @@
     remote_src: yes
 
 - name: SetPermissionWP-CentOS
-  file:
+  file: 
     path: "{{ site_folder }}/wordpress"
     state: directory
     owner: apache
     group: apache
     recurse: yes
-  when: (ansible_facts['os_family'] == "RedHat")     
+  when: (ansible_facts['os_family'] == "RedHat")
 
 - name: SetPermissionWP-Debian
-  file:
+  file: 
     path: "{{ site_folder }}/wordpress"
     state: directory
     owner: www-data
@@ -61,4 +61,4 @@
 - name: 'enableHttpd'
   service:
     name: httpd
-    enabled: yes    
+    enabled: yes
