--- a/roles/serverTools/tasks/main.yml
+++ b/roles/serverTools/tasks/main.yml
@@ -16,7 +16,7 @@
       - zip
       - wget
       - curl
-#      - python3
+      - python3
     state: latest
   when: (ansible_facts['os_family'] == "Debian")    
 
@@ -28,7 +28,7 @@
       - zip
       - wget
       - curl
-      - python
+      - python3
       - yum-utils
     state: latest
   when: (ansible_facts['os_family'] == "RedHat")
@@ -47,4 +47,4 @@
     state: disabled
   when: (ansible_facts['os_family'] == "RedHat")   
   notify:
-    - restart server
+    - Restart Server
